# SQSLogger

./: .gitignore  LICENSE  README.md
api/: Dockerfile  alembic.ini  docker-compose.yml  env.example  pyproject.toml  run.sh
api/.bin/: init-aws.sh  run.sh
api/api/: __main__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py  sqs.py
api/core/: config.py  logging.py  services.py  sqs_client.py
api/core/database/: models.py  session.py
api/core/database/migrations/: env.py
api/core/database/migrations/versions/: 4c910c89e032_.py
api/core/dto/: log_entry.py
api/migrations/: env.py
api/migrations/versions/: 339481241640_add_logentry_model.py
api/workers/: __main__.py  worker.py
infra/: app.py  cdk.context.json  envexample  pyproject.toml  requirements-dev.txt  requirements.txt
infra/infra/: config.py  infra_stack.py  network_stack.py
infra/infra/layers/: database_stack.py  network.py  network_stack.py
infra/tests/unit/: test_infra_stack.py
